# MatrixCurer

./: .gitignore  CMakeLists.txt  README.md  README.rst
.devcontainer/: Dockerfile  devcontainer.json  install.sh  postCreateCommand.sh
include/: Multiply.h
include/MatrixCurer/: LinearSystemSolver.h  Matrix.h  common.h  utils.h
include/matrix_curer/: CustomAllocator.hpp  Facade.hpp  LinearSystemSolver.h  LinearSystemSolver.hpp  LinearSystemSolverConcrete1.hpp  LinearSystemSolverConcrete2.hpp  Matrix.hpp  MatrixMultiplication.hpp  MatrixOperation.hpp  SVDDecomposer.hpp  SVDDecomposerConcrete1.hpp  SVDDecomposerConcrete2.hpp  utils.h  utils.hpp
src/: CustomAllocator.cpp  Facade.cpp  LinearSystemSolver.cpp  LinearSystemSolverConcrete1.cpp  LinearSystemSolverConcrete2.cpp  Matrix.cpp  Matrix.old.cpp  MatrixMultiplication.cpp  MatrixOperation.cpp  SVDDecomposerConcrete1.cpp  SVDDecomposerConcrete2.cpp  main.cpp  mod.cpp  utils.cpp
test/: test_Matrix.py  test_Multiply.py  test_benchmark.py  test_ill_conditioned_benchmark.py  test_ill_conditioned_linear_system.py  test_linear_system_solver.py  test_matrix.py  test_matrix_operation.py  test_multiplication_benchmark.py  test_numpy_compatible.py  test_svd.py
